Отдельный метод сохранения ошибки при обходе сайта